--- a/templates/cold_emails.html
+++ b/templates/cold_emails.html
@@ -31,6 +31,7 @@
   <div class="nav-tabs">
     <a href="/cold-emails" class="nav-link active">Cold Emails</a>
     <a href="/followup-emails" class="nav-link">Follow-Up Emails</a>
+    <a href="/import-leads" class="nav-link">Import Leads</a>
   </div>
 
   <div class="info">
